<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.HomeFragment"
        >
        <com.kido.alienclock.clock.AlienClock
            android:id="@+id/alienclock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:clock_type="numeric"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/earthclock"
            app:layout_constraintStart_toStartOf="parent"
            />
        <Button android:id="@+id/btnEditTime"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/edit_time"
            app:layout_constraintTop_toBottomOf="@id/alienclock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnEditDate"/>

        <Button android:id="@+id/btnEditDate"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/edit_date"
            app:layout_constraintTop_toBottomOf="@id/alienclock"
            app:layout_constraintStart_toEndOf="@id/btnEditTime"
            app:layout_constraintEnd_toStartOf="@+id/btnReset"/>

        <Button android:id="@+id/btnReset"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/reset"
            app:layout_constraintTop_toBottomOf="@id/alienclock"
            app:layout_constraintStart_toEndOf="@id/btnEditDate"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.kido.alienclock.clock.EarthClock
            android:id="@+id/earthclock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:clock_type="numeric"
            app:layout_constraintTop_toBottomOf="@+id/btnEditTime"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>